@@ -1,10 +1,10 @@
 package com.sfsctech.support.common.security.aes;
 
-import com.sfsctech.core.base.constants.LabelConstants;
+import com.sfsctech.core.base.domain.result.RpcResult;
+import com.sfsctech.support.common.security.EncrypterTool;
 import com.sfsctech.support.common.security.base64.Base64;
-import com.sfsctech.support.common.util.HexUtil;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import com.sfsctech.support.common.util.RandomUtil;
+import com.sfsctech.support.common.util.UUIDUtil;
 
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
@@ -12,6 +12,7 @@ import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.UnsupportedEncodingException;
+import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.security.AlgorithmParameters;
 import java.security.SecureRandom;
@@ -105,7 +106,7 @@ public class Aes {
             Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");// 创建密码器
             cipher.init(Cipher.ENCRYPT_MODE, key, generateIV(iv));// 初始化
             byte[] result = cipher.doFinal(bef_aes.getBytes(StandardCharsets.UTF_8));
-            return new BASE64Encoder().encode(result);
+            return Base64.encrypt(result);
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -169,7 +170,7 @@ public class Aes {
      */
     public static String decryptCBC(String aft_aes, String salt, byte[] iv) {
         try {
-            byte[] content = new BASE64Decoder().decodeBuffer(aft_aes);
+            byte[] content = Base64.decrypt(aft_aes);
             SecretKey secretKey = getKey(salt);
             byte[] enCodeFormat = secretKey.getEncoded();
             SecretKeySpec key = new SecretKeySpec(enCodeFormat, "AES");
@@ -227,11 +228,36 @@ public class Aes {
     }
 
     public static void main(String[] args) {
+        String access_Jwt_Token = EncrypterTool.encrypt(EncrypterTool.Security.AesCBC, "fsg-itss-datamonitor:access_token_id:admin:2020-02-13 14:20:10.123");
+        System.out.println(access_Jwt_Token);
+        System.out.println(EncrypterTool.decrypt(EncrypterTool.Security.AesCBC, access_Jwt_Token));
+        StringBuilder sb = new StringBuilder("{");
+        for (byte aByte : "b41f7ad90a4f4330".getBytes()) {
+            String hex = Integer.toHexString(aByte & 0xFF);
+            if (hex.length() == 1) {
+                hex = '0' + hex;
+            }
+            sb.append("0x" + hex + ", ");
+        }
+        sb.append("}");
 //        String content = "tes发的时刻开房大厦fkldsfjslkdjfsd8538432-942jldskds fds jffld!@#$%^&*()_t";
         String content = "Timestamp=" + System.currentTimeMillis();
         System.out.println("明文：" + content);
-        String password = "中文es123@$#";
+        String password = "84fde0de80864730bd0783a626e23285";
         System.out.println("密钥：" + password);
+        try {
+            String token = UUIDUtil.base64Uuid();
+            System.out.println("原始token：" + token);
+            String mytoken = encryptCBC(String.valueOf(System.currentTimeMillis()), "84fde0de80864730bd0783a626e23285", "b41f7ad90a4f4330".getBytes());
+            System.out.println("加密后token：" + mytoken);
+            System.out.println("网络传输编码后token：" + URLEncoder.encode(mytoken, "UTF-8"));
+            RpcResult<String> result = new RpcResult<>();
+            result.setResult("");
+            System.out.println(result);
+
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
 //        System.out.println("AES加密");
 //        // 加密
 //        String s = encrypt(content, password);
@@ -241,16 +267,17 @@ public class Aes {
 //        System.out.println("解密后：" + decrypt(s, password));
         System.out.println("AES CBC加密");
 //        System.out.println("明文：" + content);
-        String s1 = Base64.encrypt(encryptCBC(content, password).getBytes());
+        String s1 = Base64.encrypt(encryptCBC(content, password, "b41f7ad90a4f4330".getBytes()).getBytes());
         System.out.println("加密后：" + s1);
 
-        System.out.println("解密后：" + decryptCBC(new String(Base64.decrypt(s1)), password));
+        System.out.println("解密后：" + decryptCBC(new String(Base64.decrypt(s1)), password, "b41f7ad90a4f4330".getBytes()));
 //        System.out.println("密钥：" + CBC_SALT);
-//        System.out.println("向量：{0x4b, 0x28, 0x52, 0x39, 0x33, 0x30, 0x34, 0x4a, 0x40, 0x24, 0x4f, 0x38, 0x4b, 0x2a, 0x31, 0x37}");
+        System.out.println("向量：" + sb.toString());
+        System.out.println("向量：{0x4b, 0x28, 0x52, 0x39, 0x33, 0x30, 0x34, 0x4a, 0x40, 0x24, 0x4f, 0x38, 0x4b, 0x2a, 0x31, 0x37}");
 //
 //        System.out.println(new String(new byte[]{0x4b, 0x28, 0x52, 0x39, 0x33, 0x30, 0x34, 0x4a, 0x40, 0x24, 0x4f, 0x38, 0x4b, 0x2a, 0x31, 0x37}));
 //        System.out.println(decryptCBC(encryptCBC(content)));
-//        String t = encryptCBC(content, "D%H@6przcRAs7@#3", new byte[]{0x48, 0x45, 0x4c, 0x4c, 0x4f, 0x57, 0x4f, 0x52, 0x4c, 0x44, 0x31, 0x32, 0x33, 0x34, 0x35, 0x36});
+        String t = encryptCBC(content, "D%H@6przcRAs7@#3", new byte[]{0x48, 0x45, 0x4c, 0x4c, 0x4f, 0x57, 0x4f, 0x52, 0x4c, 0x44, 0x31, 0x32, 0x33, 0x34, 0x35, 0x36});
 //        System.out.println(t);
 //        System.out.println(Aes.decryptCBC(t, "D%H@6przcRAs7@#3", new byte[]{0x48, 0x45, 0x4c, 0x4c, 0x4f, 0x57, 0x4f, 0x52, 0x4c, 0x44, 0x31, 0x32, 0x33, 0x34, 0x35, 0x36}));
 
